# paminco

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tester.ipynb
.github/workflows/: coverage.yml  pip_install.yml  pytest.yml  update_docs.yml
_modules/: index.html
_modules/paminco/: _base.html  callback.html  linalg.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt  utils.rst.txt
_sources/theory/: min_cost_flow.rst.txt  par_mcf.rst.txt
_sources/user_guide/: index.rst.txt
_static/: SVG_SOURCES.md  copybutton.js
_static/content/: network_intro.txt
_static/css/: api.css  paminco.css  user_guide.css
api/: index.html  utils.html
api/algo/: efa.html  index.html  mca.html  mcfi.html
api/base/: abapprox.html  index.html  solution.html  solver.html
api/net/: edges.html  index.html  network.html  nodes.html  paminco.net.Shared.edges.html  shared.html
api/optim/: fw.html  fw_net.html  index.html  subproblem.html
doc/source/: conf.py  getting_started.ipynb  index.rst
docs/: Makefile
docs/source/: conf.py  getting_started.ipynb
paminco/: __init__.py  _base.py  _doc.py  callback.py  linalg.py
paminco/algo/: __init__.py  efa.py  mca.py  mcfi.py
paminco/net/: __init__.py  _convert_gas.py  _convert_traffic.py  _data.py  _data_examples.py  _data_gas.py  _data_sioux.py  cost.py  demand.py  network.py  path.py  shared.py
paminco/optim/: __init__.py  _base.py  fw.py  fw_net.py  subproblem.py
paminco/tests/: test_base.py  test_linalg.py
paminco/utils/: __init__.py  bisec.py  io.py  math.py  misc.py  readin.py  testing.py  typing.py
scripts/: docs_to_pages.py
source/: conf.py
source/_templates/: t.rst
source/api/: index.rst
source/theory/: index.rst
theory/: index.html  min_cost_flow.html  par_mcf.html
user_guide/: index.html
user_guide/applications/: index.html
(+169 files in other folders)
