[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta" 

# --- pytest -----------------------------------------------
[tool.pytest.ini_options]
markers = [
    "e2e: end to end tests",
    "very_slow",
    "slow",
    "fast",
]
# Do not run dependencies test
norecursedirs = "env/*"
# Filter out warnings while running tests
addopts = "-p no:warnings"

# --- coverage ---------------------------------------------
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abc.abstractmethod",

    "plot_flow_on_edge",
]
[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/paminco/_doc.py",
]