[metadata]
name = paminco
version = 0.0.5
author = Philipp Warode, Per Joachims
description = A Python package for parametric min cost flows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/todo/todo
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy>=1.4.1
    numpy>=1.19.5
    pandas>=1.1.5
    matplotlib>=3.2.2
    numexpr>=2.7.3
    psutil>=5.4.8

